--- a/.gitignore
+++ b/.gitignore
@@ -118,7 +118,7 @@ celerybeat.pid
 # SageMath parsed files
 *.sage.py
 
-# Environments
+# Environments (mine is last one)
 .env
 .venv
 env/
@@ -126,6 +126,7 @@ venv/
 ENV/
 env.bak/
 venv.bak/
+crystallm_venv/
 
 # Spyder project settings
 .spyderproject
@@ -164,3 +165,9 @@ scratches/
 saved_models/
 
 .DS_Store
+
+# large files
+Miniconda3.sh
+crystallm_v1_small.tar.gz
+crystallm_v1_small/
+cuda-repo-wsl-ubuntu-11-8-local_11.8.0-1_amd64.deb
