--- a/.gitignore
+++ b/.gitignore
@@ -171,3 +171,6 @@ Miniconda3.sh
 crystallm_v1_small.tar.gz
 crystallm_v1_small/
 cuda-repo-wsl-ubuntu-11-8-local_11.8.0-1_amd64.deb
+BG_CIFs/
+BG_cifs_more_tokens/
+BG_cifs_process_steps/
