--- a/config/cif_extd_BG/finetune_head_BG.yaml
+++ b/config/cif_extd_BG/finetune_head_BG.yaml
@@ -1,14 +1,14 @@
 # directories and checkpoints
-out_dir: "pretrained_models/large_model_untouched" # path to model ckpt to train on
+out_dir: "model_ckpts/pretrained_models/large_model_untouched" # path to model ckpt to train on
 dataset: "CIF_BG_proj/BG_large_tokens"
 init_from: "resume"
-finetune_method : "LoRA"
-ckpt_out_dir: "finetuned_models/BG_LoRA_test"  # the path to the directory to save the checkpoints
+finetune_method : "finetune_head"
+ckpt_out_dir: "model_ckpts/finetuned_models/BG_head_test"  # the path to the directory to save the checkpoints
 
 # evaluation frequency
 always_save_checkpoint: False
 validate: True
-eval_interval: 2
+eval_interval: 5
 eval_iters_train: 2
 eval_iters_val: 2
 log_interval: 2  # how often to print to the console (1 = every iteration)
@@ -17,7 +17,7 @@ sanity_check: True  # if True, prints resizing of tensor details
 # batch and block sizes
 gradient_accumulation_steps: 4
 batch_size: 4
-block_size: 2048  # context of up to `block_size` previous characters
+block_size: 1024  # context of up to `block_size` previous characters
 
 # architecture
 n_layer: 12
@@ -25,20 +25,15 @@ n_head: 12
 n_embd: 1024
 dropout: 0.1
 
-# LoRA
-LoRA_rank: 4
-LoRA_alpha: 4
-
 # trackers
 codecarbon: False  # if True, log emissions to CodeCarbon
 tracker_project: "crystallm"  # the name of the project in the CodeCarbon dashboard
 metrics_dir: "comp_metrics"  # the path to the folder where the metrics will be stored
-CarbonTracker: False  # if True, log emissions to CarbonTracker
 
 #wandb
 wandb_log: True # disabled by default
 wandb_project: 'crystallm_CIF_BG_tests'
-wandb_run_name: 'BG_large_LoRA'
+wandb_run_name: 'BG_large_head'
 
 # learning rate and optimizer
 learning_rate: 1e-4
