--- a/config/regression_BG/regr_BG_LoRA_myriad_hps.yaml
+++ b/config/regression_BG/regr_BG_LoRA_myriad_hps.yaml
@@ -3,56 +3,56 @@ out_dir: "model_ckpts/pretrained_models/large_model_untouched" # path to model c
 dataset: "CIF_BG_proj/table_MP_full_tokens.pkl.gz"
 init_from: "resume"
 finetune_method: "LoRA"
-ckpt_out_dir: "model_ckpts/regression_models/BG_LoRA_v2"  # the path to the directory to save the checkpoints
+ckpt_out_dir: "model_ckpts/regression_models/BG_LoRA"  # the path to the directory to save the checkpoints
 adaptation: "regression"  # the type of adaptation to perform
 
 # evaluation frequency
-always_save_checkpoint: False
+always_save_checkpoint: false
 validate: true
 eval_interval: 100
 eval_iters_train: 100
 eval_iters_val: 100
 log_interval: 50  # how often to print to the console (1 = every iteration)
-sanity_check: False  # if True, prints resizing of tensor details
+sanity_check: false  # if True, prints resizing of tensor details
 
 # batch and block sizes
-gradient_accumulation_steps: 32
+gradient_accumulation_steps: 8
 batch_size: 4
 block_size: 2048  # context of up to `block_size` previous characters
-latent_dim: 1024
 
 # architecture
 n_layer: 16
 n_head: 16
-n_embd: 1536
-dropout: 0.13
+n_embd: 1024
+dropout: 0.1
 
 # trackers
-codecarbon: True  # if True, log emissions to CodeCarbon
+codecarbon: true  # if True, log emissions to CodeCarbon
 tracker_project: "crystallm"  # the name of the project in the CodeCarbon dashboard
 metrics_dir: "comp_metrics"  # the path to the folder where the metrics will be stored
 
 #wandb
-wandb_log: True # disabled by default
-wandb_project: 'crystallm_regression_BG_myriad'
-wandb_run_name: 'regression_BG_LoRA_myriad'
+wandb_log: true # disabled by default
+wandb_project: 'hps_regression_BG_myriad_LoRA'
+wandb_run_name: 'hps_regression_BG_LoRA_myriad'
 
 # learning rate and optimizer
-learning_rate: 1.13e-4
+learning_rate: 1e-3
 decay_lr: true
-lr_decay_iters: 1  # make equal to max_iters usually
-min_lr: 1.13e-5  # learning_rate / 10 usually
-beta2: 0.941 # make a bit bigger because number of tokens per iter is small
-beta1: 0.881
-grad_clip: 6.85
+lr_decay_iters: 2000  # make equal to max_iters usually
+min_lr: 1e-4  # learning_rate / 10 usually
+beta2: 0.995 # make a bit bigger because number of tokens per iter is small
 
 # training iterations
-max_iters: 4000
+max_iters: 2000
 warmup_iters: 100  # not super necessary potentially
 
 # on macbook also add
 # device: 'cpu'  # run on cpu only
 # compile: False # do not torch compile the model
-weight_decay: 0.05
-LoRA_rank: 4
-LoRA_alpha: 6
+weight_decay: 0.1
+LoRA_rank: 2
+LoRA_alpha: 4
+
+hp_search: true
+n_trials_hp_search: 150
